# solardem

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  mypy.ini  pyproject.toml  test.py
doc/: conf.py  dem_theory.md  index.rst
doc/api/: demreg.rst  index.rst
doc/explanation/: dem_theory.md  design.rst  existing_tools.md  index.rst
doc/tutorials/: aia.md  demreg.rst  index.rst
solardem/: demreg.py
solardem/aia/: channel.py  response.py
solardem/demreg/: __init__.py
solardem/instruments/aia/: __init__.py  response.py
