[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]


[project]
name = "solardem"
version = "0.0.1"
dependencies = [
    "astropy",
    "matplotlib",
    "numpy",
    "scipy",
    "sunpy",

    "demregpy==0.6.2",
]

[project.optional-dependencies]
docs = [
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-automodapi",
    "sphinx-gallery"
]

[mypy-astropy]
ignore_missing_imports = "True"
